# videoshare

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  gunicorn.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
deploy/: .docker-entrypoint.sh  backend.Dockerfile
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  client.js  config.js  index.js
frontend/src/components/button/: Button.css  Button.js  IconButton.css  IconButton.js
frontend/src/components/contents/: Contents.css  Contents.js
frontend/src/components/controls/: Controls.css  Controls.js
frontend/src/components/dialog/: Dialog.css  Dialog.js
frontend/src/components/dnd/: DragAndDrop.css  DragAndDrop.js
frontend/src/components/icon-button/: IconButton.js
frontend/src/components/node/: Node.css  Node.js
frontend/src/components/path/: Path.css  Path.js
migrations/versions/: 0001_initial_migration.py  0002_remove_path_field.py  3bf5ddf99ec3_.py  c7a3b7861bcd_initial_migration.py
tests/: conftest.py  preconditions.py  test_folder.py  test_status.py  test_video.py  verifiers.py
videoshare/: app.py  cli.py  config.py  errors.py  models.py  utils.py  version.py  wsgi.py
videoshare/api/: __init__.py  explore.py  explorer.py  folder.py  status.py  video.py
videoshare/schema/: response.py
